Fix dropdowns showing russian text

--- a/app/views/spree/layouts/customer.html.erb
+++ b/app/views/spree/layouts/customer.html.erb
@@ -101,6 +101,7 @@
     		  $('select').styler({
     				selectSearch: false,
     				fileBrowse: 'Choose',
+						selectPlaceholder: 'Choose',
     	    		selectSearchPlaceholder: 'Search',
     	    		singleSelectzIndex: '20',
     			});
