--- a/app/views/spree/layouts/manage.html.erb
+++ b/app/views/spree/layouts/manage.html.erb
@@ -100,6 +100,7 @@
     		  $('select').styler({
     				selectSearch: false,
     				fileBrowse: 'Choose',
+						selectPlaceholder: 'Choose',
     	    		selectSearchPlaceholder: 'Search',
     	    		singleSelectzIndex: '20',
     			});
