--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -2142,6 +2142,15 @@ img{
 .order-items-total-count{
 	padding-top: 15px;
 }
+.orders-list-block #filter-form input[type="submit"]{
+	display: inline-block;
+	width: 75px;
+	margin: 0;
+	margin-left: -4px;
+	padding: 3px 5px 7px 5px;
+	text-align: center;
+	vertical-align: baseline;
+}
 /*-------------------------------------------------------------------------*/
 /*	3.	Responsive
 /*-------------------------------------------------------------------------*/
