Move delivery date box on orders overview

--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -1222,7 +1222,7 @@ img{
 	float: left;
 	margin-right: 20px;
 }
-.app_ui-wrapper .app_ui-block .single-order-block .search-block label{
+.app_ui-wrapper .app_ui-block .single-order-block .search-block label, .app_ui-wrapper .app_ui-block .orders-list-block .search-block label{
 	display: inline-block;
   float: left;
   margin-right: 20px;
