--- a/app/views/spree/manage/orders/index.html.erb
+++ b/app/views/spree/manage/orders/index.html.erb
@@ -20,14 +20,15 @@
         <input type="text" placeholder="Search Products">
         <input type="submit" value="Search">
       </form>
-      <form id="date-form">
-        <label>Delivery Date:</label>
-        <select name="date-form" id="date_form">
-          <option value="all">10/20/2015</option>
-          <option value="price">Option 2</option>
-          <option value="name">Option 3</option>
-        </select>
-      </form>
+
+
+
+          <div id="date-form">
+            <label>Delivery Date:</label>
+    				<%#= label :delivery_date, id: 'date_form' %>
+    			  <%= date_field :delivery_date, placeholder: "Delivery Date" %>
+    			</div>
+
       <div class="clear"></div>
     </div>
     <form action="#" id="orders-list-form">
