link to all catalogs in customer side menu

--- a/app/views/spree/cust/shared/side_menu/category/_catalog.html.erb
+++ b/app/views/spree/cust/shared/side_menu/category/_catalog.html.erb
@@ -1,13 +1,15 @@
-<a href="<%= vendor_url(Spree::Vendor.find_by_name('Ceci Cela')) %>">
+
   <h3>
     <%=image_tag("spree/manage/img/catalog.png")%>
-    <span class="tablet-hide">Catalog
-       <!-- <i class="fa fa-angle-left"></i> -->
+    <span class="tablet-hide">Catalogs
+       <i class="fa fa-angle-left"></i>
      </span>
   </h3>
-</a>
+
 <div class="accordion-block">
   <ul>
-    <li><a href=""></a></li>
+    <% current_spree_user.customer.vendors.each do |vendor| %>
+      <li><a href="<%= vendor_url(vendor) %>"><%= vendor.name %></a></li>
+    <% end %>
   </ul>
 </div>
