Orders list in customer side menu

--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -1166,6 +1166,15 @@ img{
 .sb-icon-search i{
 	margin: 0 !important;
 }
+.app_ui-wrapper aside .nav-block .recent-orders-list{
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.app_ui-wrapper aside .nav-block .recent-orders-list li{
+	padding-left: 20px;
+}
 
 /* Open state */
 .sb-search.sb-search-open,
