Fix link on cust new order

--- a/app/views/spree/cust/orders/new.html.erb
+++ b/app/views/spree/cust/orders/new.html.erb
@@ -1,6 +1,6 @@
 
 <div class="search-area layout2">
-	<a href="<%= manage_orders_url %>" class="cta-link">Back to all Orders</a>
+	<a href="<%= orders_url %>" class="cta-link">Back to all Orders</a>
 	<div class="search-block">
 		<form id="search-form">
 			<input type="text" placeholder="Search by order#">
