Fix position header nav bar and side menu

--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -351,6 +351,11 @@ img{
     box-sizing: border-box;
     padding: 6px 20px 6px 250px;
 }
+.app_ui-wrapper .header .header{
+	position: fixed;
+	width: 100%;
+}
+
 .header .nav-ico, .header .search-ico, .header .settings-ico, .header .exit-ico{
     display: inline-block;
     float: left;
@@ -394,8 +399,8 @@ img{
 	position: relative;
 }
 .app_ui-wrapper aside{
-	position: absolute;
-	top: 0;
+	position: fixed;
+	top: 52;
 	left: 0;
 	width: 0;
 	height: 0;
