--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -20,6 +20,10 @@ body{
 	margin: 0;
 	padding: 0;
 }
+a{
+	text-decoration: none;
+}
+
 label{
 	text-align: left;
 }
@@ -1870,6 +1874,13 @@ img{
 }
 .orders-list-table .tRow {
 	display: table-row;
+}
+.orders-list-table div.tRow.orders-list-order:hover{
+	color: #FF7E00
+}
+
+.orders-list-table .tRow .cel:hover, .orders-list-table .tRow.orders-list-order.orders-list-order-link:hover{
+	color:inherit;
 }
 .orders-list-table .tRow i{
 	margin-left: 5px;
