--- a/app/views/spree/manage/orders/index.html.erb
+++ b/app/views/spree/manage/orders/index.html.erb
@@ -59,14 +59,26 @@
         </div>
         <% if @orders %>
           <% @orders.each do |order| %>
-            <div class="tRow">
-              <div class="cel"><a href="<%= manage_customer_url(order.customer) %>"><%= order.customer.name %></a></div>
+            <div class="tRow orders-list-order">
+              <a href="<%= edit_manage_order_url(order) %>" class="orders-list-order-link cel">
+                <%= order.customer.name %>
+              </a>
               <div class="cel mobile"><a href="<%= edit_manage_order_url(order) %>" class="cta-button">View</a></div>
-              <div class="cel"><a href="<%= edit_manage_order_url(order) %>"><%= order.number %></a></div>
-              <div class="cel"><%= order.delivery_date.to_date.to_formatted_s(:long) %></div>
-              <div class="cel"><%= order.item_count %></div>
-              <div class="cel"> <%= number_to_currency(order.total) %></div>
-              <div class="cel"> <%= order.state %></div>
+              <a href="<%= edit_manage_order_url(order) %>" class="orders-list-order-link cel">
+                <%= order.number %>
+              </a>
+              <a href="<%= edit_manage_order_url(order) %>" class="orders-list-order-link cel">
+                <%= order.delivery_date.to_date.to_formatted_s(:long) %>
+              </a>
+              <a href="<%= edit_manage_order_url(order) %>" class="orders-list-order-link cel">
+                <%= order.item_count %>
+              </a>
+              <a href="<%= edit_manage_order_url(order) %>" class="orders-list-order-link cel">
+                <%= number_to_currency(order.total) %>
+              </a>
+              <a href="<%= edit_manage_order_url(order) %>" class="orders-list-order-link cel">
+                <%= order.state %>
+              </a>
               <div class="cel approve"><input type="checkbox"></div>
               <div class="cel"></div>
             </div>
