--- a/app/views/spree/manage/root/app_dash_widget/_customer_sales.html.erb
+++ b/app/views/spree/manage/root/app_dash_widget/_customer_sales.html.erb
@@ -1,8 +1,8 @@
 <h3 class="title">Customer Sales</h3>
 <label for=""><span class="label-text">Spend by:</span>
-  <select name="spendBy" id="spendBy">
+  <!-- <select name="spendBy" id="spendBy">
     <option value="Supplier">Customer</option>
     <option value="">Option 2</option>
     <option value="">Option 3</option>
-  </select>
+  </select> -->
 </label>
