--- a/app/views/spree/manage/root/app_dash_widget/_food_sales.html.erb
+++ b/app/views/spree/manage/root/app_dash_widget/_food_sales.html.erb
@@ -1,8 +1,8 @@
 <h3 class="title">Food Sales</h3>
 <div class="col1">
-  <select name="period" id="period">
+  <!-- <select name="period" id="period">
     <option value="Monthly">Monthly</option>
     <option value="">Option 2</option>
     <option value="">Option 3</option>
-  </select>
+  </select> -->
 </div>
