link order row in index to order view page

--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -1875,13 +1875,13 @@ img{
 .orders-list-table .tRow {
 	display: table-row;
 }
+.orders-list-table div.tRow.orders-list-order{
+	color: #6e665f;
+}
 .orders-list-table div.tRow.orders-list-order:hover{
-	color: #FF7E00
+	color: #FF7E00;
 }
 
-.orders-list-table .tRow .cel:hover, .orders-list-table .tRow.orders-list-order.orders-list-order-link:hover{
-	color:inherit;
-}
 .orders-list-table .tRow i{
 	margin-left: 5px;
 }
@@ -1915,17 +1915,17 @@ img{
     text-align: left;
     padding: 15px 10px;
     font-size: 16px;
-    color: #6e665f;
+    color: inherit;
     position: relative;
 }
-.orders-list-table .tRow .cel:first-child a{
-    color: #6e665f;
-    display: block;
-    text-decoration: none;
-}
-.orders-list-table .tRow .cel:first-child a:hover{
-	color: #FF7E00;
-}
+// .orders-list-table .tRow .cel:first-child a{
+//     color: #6e665f;
+//     display: block;
+//     text-decoration: none;
+// }
+// .orders-list-table .tRow .cel:first-child a:hover{
+// 	color: #FF7E00;
+// }
 
 .orders-list-block .search-block{
 	padding-bottom: 20px;
