Add date to filter for manage portal orders

--- a/app/views/spree/manage/orders/index.html.erb
+++ b/app/views/spree/manage/orders/index.html.erb
@@ -7,13 +7,18 @@
   <div class="orders-list-block">
     <div class="search-block">
 
-      <form id="filter-form">
+      <!-- <form id="filter-form"> -->
+      <%= form_tag manage_orders_url, method: :get do %>
         <%= select(:customer, :name) do%>
-        <option value="all">All</option>
+          <option value="all">All</option>
           <%= options_for_select (@vendor.customers.collect(&:name)) %>
         <% end %>
+
+        <%#= date (:date) %>
+        <input type="date" name=date>
         <input type="submit" value="Filter">
-      </form>
+      <!-- </form> -->
+      <% end %>
 
       <form id="search-form">
         <label>Search:</label>
@@ -23,11 +28,11 @@
 
 
 
-          <div id="date-form">
+          <!-- <div id="date-form">
             <label>Delivery Date:</label>
     				<%#= label :delivery_date, id: 'date_form' %>
-    			  <%= date_field :delivery_date, placeholder: "Delivery Date" %>
-    			</div>
+    			  <%#= date_field :delivery_date, placeholder: "Delivery Date" %>
+    			</div> -->
 
       <div class="clear"></div>
     </div>
