Add date filter to customer portal orders

--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -2167,6 +2167,10 @@ img{
 .order-items-total-count{
 	padding-top: 15px;
 }
+.orders-list-block #filter-form input{
+	padding: 1px 0 4px 10px;
+}
+
 .orders-list-block #filter-form input[type="submit"]{
 	display: inline-block;
 	width: 75px;
