--- a/app/views/spree/manage/orders/index.html.erb
+++ b/app/views/spree/manage/orders/index.html.erb
@@ -7,18 +7,15 @@
   <div class="orders-list-block">
     <div class="search-block">
 
-      <!-- <form id="filter-form"> -->
-      <%= form_tag manage_orders_url, method: :get do %>
+      <form id="filter-form">
         <%= select(:customer, :name) do%>
           <option value="all">All</option>
           <%= options_for_select (@vendor.customers.collect(&:name)) %>
         <% end %>
-
-        <%#= date (:date) %>
         <input type="date" name=date>
         <input type="submit" value="Filter">
-      <!-- </form> -->
-      <% end %>
+      </form>
+
 
       <form id="search-form">
         <label>Search:</label>
