Enabling customer images on my account and admin side. Need to add abilities for customer and vendor to add their own images.

--- a/app/assets/stylesheets/spree/manage/customer.css
+++ b/app/assets/stylesheets/spree/manage/customer.css
@@ -26,7 +26,7 @@ ul, li{
 .contact-group .contact-img {
   width: 150px;
   height: 150px;
-  background-color: blue;
+  background-color: light-gray;
   float: left;
   margin-bottom: 10px;
   margin-right: 10px;
