--- a/app/views/spree/cust/customers/show.html.erb
+++ b/app/views/spree/cust/customers/show.html.erb
@@ -18,7 +18,15 @@
 
   </section>
   <div class="contact-group">
-    <img class="contact-img">
+    <% if @customer.images.any? %>
+      <% @customer.images.each do |image| %>
+        <%= image_tag image.attachment.url(:product), :class => "contact-img", alt: image.alt %>
+      <% end %>
+		<% else %>
+			<%#= image_tag image.attachment.url(:product), :class => "contact-img", alt: image.alt %>
+			<%#= image_url("spree/manage/img/logo2.png"), :class => "contact-img", alt: image.alt  %>
+			<%= image_tag "spree/manage/img/multi-user.png", :class => "contact-img", alt: "account image" %>
+    <% end %>
 
     <div class="contact-info">
       <% if @customer.ship_address %>
