Remove sort tags

--- a/app/views/spree/cust/orders/show.html.erb
+++ b/app/views/spree/cust/orders/show.html.erb
@@ -37,11 +37,11 @@
 				<div class="cel">
 					<a href="" class="sort-name">Item <i class="fa fa-sort"></i></a>
 				</div>
-				<div class="cel">
-					<a href="" class="sort-name">SKU <i class="fa fa-sort"></i></a>
+				<div class="cel">SKU
+					<!-- <a href="" class="sort-name">SKU <i class="fa fa-sort"></i></a> -->
 				</div>
-				<div class="cel">
-					<a href="" class="sort-sku">Pack/Size <i class="fa fa-sort"></i></a>
+				<div class="cel">Pack/Size
+					<!-- <a href="" class="sort-sku">Pack/Size <i class="fa fa-sort"></i></a> -->
 				</div>
 				<div class="cel">
 					<a href="" class="sort-lead_time">Price <i class="fa fa-sort"></i></a>
