--- a/app/views/spree/cust/orders/edit.html.erb
+++ b/app/views/spree/cust/orders/edit.html.erb
@@ -33,11 +33,11 @@
 				<div class="cel">
 					<a href="" class="sort-name">Item <i class="fa fa-sort"></i></a>
 				</div>
-				<div class="cel">
-					<a href="" class="sort-name">SKU <i class="fa fa-sort"></i></a>
+				<div class="cel">SKU
+					<!-- <a href="" class="sort-name">SKU <i class="fa fa-sort"></i></a> -->
 				</div>
-				<div class="cel">
-					<a href="" class="sort-sku">Pack/Size <i class="fa fa-sort"></i></a>
+				<div class="cel">Pack/Size
+					<!-- <a href="" class="sort-sku">Pack/Size <i class="fa fa-sort"></i></a> -->
 				</div>
 				<div class="cel">
 					<a href="" class="sort-lead_time">Price <i class="fa fa-sort"></i></a>
@@ -48,7 +48,7 @@
 				<div class="cel">
 					<a href="" class="sort-price">Total <i class="fa fa-sort"></i></a>
 				</div>
-				
+
 			</div>
 
 			<div class="order-items-block">
