--- a/app/views/spree/manage/shared/_header.html.erb
+++ b/app/views/spree/manage/shared/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="logo"></div>
   <div class="header-nav">
     <div class="nav-ico"></div>
-    <div id="sb-search" class="search-ico sb-search">
+    <div id="sb-search" class="search-ico sb-search" style="display:none">
       <form>
         <span class="sb-icon-search"><i class="fa fa-search sb-icon-search"></i> </span>
         <input class="sb-search-input" placeholder="Enter your search term..." type="text" value="" name="search" id="search">
