Sort orders by delivery_date

--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -1378,16 +1378,16 @@ img{
 	border-bottom: 1px solid #DADADA;
 }
 
-.order-product-list .tRow.header .cel .current {
+.order-product-list .tRow.header .cel .current, .orders-list-table .tRow.header .cel .current {
   padding-right: 30px;
   background-repeat: no-repeat;
   background-position: right center;
 }
-.order-product-list .tRow.header .cel .asc {
+.order-product-list .tRow.header .cel .asc , .orders-list-table .tRow.header .cel .asc{
   background-image: url(<%= asset_path 'arrowup.png' %>);
 }
 
-.order-product-list .tRow.header .cel .desc {
+.order-product-list .tRow.header .cel .desc, .orders-list-table .tRow.header .cel .desc {
   background-image: url(<%= asset_path 'arrowdown.png' %>);
 }
 .order-product-list .tRow.header {
