--- a/app/views/spree/cust/orders/index.html.erb
+++ b/app/views/spree/cust/orders/index.html.erb
@@ -33,7 +33,8 @@
             <a href="" class="sort-name">Order # <i class="fa fa-sort"></i></a>
           </div>
           <div class="cel">
-            <a href="" class="sort-date">Delivery Date<i class="fa fa-sort"></i></a>
+            <%= sortable "delivery_date" %>
+            <!-- <a href="" class="sort-date">Delivery Date<i class="fa fa-sort"></i></a> -->
           </div>
           <div class="cel">
             <a href="" class="sort-sku">Total Items <i class="fa fa-sort"></i></a>
