--- a/app/views/spree/cust/orders/index.html.erb
+++ b/app/views/spree/cust/orders/index.html.erb
@@ -27,7 +27,8 @@
       <div class="orders-list-table">
         <div class="tRow header">
           <div class="cel">
-            <a href="" class="sort-name">Vendor <i class="fa fa-sort"></i></a>
+            <%= sortable "vendor_id" %>
+            <!-- <a href="" class="sort-name">Vendor <i class="fa fa-sort"></i></a> -->
           </div>
           <div class="cel">
             <%= sortable "number", "Order #" %>
@@ -42,15 +43,15 @@
             <!-- <a href="" class="sort-sku">Total Items <i class="fa fa-sort"></i></a> -->
           </div>
           <div class="cel">
-            <%= sortable "title" %>
+            <%= sortable "total" %>
             <!-- <a href="" class="sort-pack_size">Total <i class="fa fa-sort"></i></a> -->
           </div>
           <div class="cel">
-            <% sortable "state", "Status" %>
+            <%= sortable "state", "Status" %>
             <!-- <a href="" class="sort-lead_time">Status <i class="fa fa-sort"></i></a> -->
           </div>
           <div class="cel">
-            
+
           </div>
           <div class="cel"></div>
         </div>
