--- a/app/views/spree/manage/orders/index.html.erb
+++ b/app/views/spree/manage/orders/index.html.erb
@@ -37,7 +37,8 @@
       <div class="orders-list-table">
         <div class="tRow header">
           <div class="cel">
-            <a href="" class="sort-name">Customer <i class="fa fa-sort"></i></a>
+            <%= sortable "customer_id" %>
+            <!-- <a href="" class="sort-name">Customer <i class="fa fa-sort"></i></a> -->
           </div>
           <div class="cel">
             <%= sortable "number", "Order #" %>
