Add conditionals for ordering by associations

--- a/app/views/spree/cust/orders/index.html.erb
+++ b/app/views/spree/cust/orders/index.html.erb
@@ -27,6 +27,7 @@
       <div class="orders-list-table">
         <div class="tRow header">
           <div class="cel">
+            <%#= sortable "spree_vendor.name", "Vendor" %>
             <%= sortable "vendor_id" %>
             <!-- <a href="" class="sort-name">Vendor <i class="fa fa-sort"></i></a> -->
           </div>
