Dummy data for demo

--- a/app/views/spree/cust/customers/show.html.erb
+++ b/app/views/spree/cust/customers/show.html.erb
@@ -8,7 +8,7 @@
   <section class="customer-account-info">
     <ul>
       <li><strong>Current Balance:</strong> <%= number_to_currency(@balance) %></li>
-      <li><strong>Past Due Balance:</strong></li>
+      <li><strong>Past Due Balance:</strong> $0.00</li>
       <!-- temporary terms -->
       <!-- <li><strong>Payment Terms:</strong> <%#= @vendor.payment_terms %> Days</li> -->
       <li><strong>Payment Terms:</strong> 30 Days</li>
