--- a/app/views/spree/manage/root/overview.html.erb
+++ b/app/views/spree/manage/root/overview.html.erb
@@ -19,7 +19,7 @@
 								<div class="clear"></div>
 								<div class="average-price">
 									<div> <%= number_to_currency(@average * 0.15) %> <i class="fa fa-arrow-up"></i></div>
-									<div>My Average: <%= number_to_currency(@average) %></div>
+									<div>Monthly Average: <%= number_to_currency(@average) %></div>
 								</div>
 
 								<div class="clear"></div>
