--- a/app/views/spree/manage/customers/show.html.erb
+++ b/app/views/spree/manage/customers/show.html.erb
@@ -9,7 +9,7 @@
   <section class="customer-account-info">
     <ul>
       <li><strong>Current Balance:</strong> <%= number_to_currency(@balance) %></li>
-      <li><strong>Past Due Balance:</strong> </li>
+      <li><strong>Past Due Balance:</strong> $0.00</li>
       <!-- temporary terms -->
       <li><strong>Payment Terms:</strong> <%= @vendor.payment_terms %> Days</li>
       <a href=" <%= manage_orders_url %>" class="nav-btn">Orders</a>
