add dotted underline on sortable fields

--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -1395,6 +1395,11 @@ img{
 	background: #FCF9F6;
 	border: none;
 }
+
+.tRow.header .cel a{
+	text-decoration: none;
+	border-bottom: 1px dotted #FF7E00;
+}
 .order-product-list .tRow:last-child{
 	border: none;
 }
@@ -1404,7 +1409,7 @@ img{
 }
 .order-product-list .tRow.header a{
 	color: #6e665f;
-	text-decoration: none !important;
+	// text-decoration: none !important;
 }
 .order-product-list .tRow.header a:hover{
 	color: #FF7E00;
@@ -1917,7 +1922,7 @@ img{
 }
 .orders-list-table .tRow.header a {
     color: #6e665f;
-    text-decoration: none !important;
+    // text-decoration: none !important;
 }
 .orders-list-table .tRow.header a:hover {
 	color: #FF7E00;
