Sort by price in catalogs

--- a/app/views/spree/manage/products/index.html.erb
+++ b/app/views/spree/manage/products/index.html.erb
@@ -49,7 +49,8 @@
       </div>
       <div class="cel">
         <%#= link_to "Price", sort: "price" %>
-        Price
+        <%= sortable "price" %>
+
         <!-- <a href="" class="sort-price">Price <i class="fa fa-sort"></i></a> -->
       </div>
       <div class="cel">
